// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should match snapshot: NoteText/emphasis 1`] = `
.c0 {
  color: #333;
  font-size: 16px;
  font-weight: bold;
}

<NoteText
  emphasis={true}
  red={false}
>
  <styled.p
    emphasis={true}
    red={false}
  >
    <p
      className="c0"
    >
      テキスト
    </p>
  </styled.p>
</NoteText>
`;

exports[`should match snapshot: NoteText/nomal 1`] = `
.c0 {
  color: #333;
  font-size: 14px;
  font-weight: nomal;
}

<NoteText
  emphasis={false}
  red={false}
>
  <styled.p
    emphasis={false}
    red={false}
  >
    <p
      className="c0"
    >
      テキスト
    </p>
  </styled.p>
</NoteText>
`;

exports[`should match snapshot: NoteText/red 1`] = `
.c0 {
  color: #e60000;
  font-size: 14px;
  font-weight: nomal;
}

<NoteText
  emphasis={false}
  red={true}
>
  <styled.p
    emphasis={false}
    red={true}
  >
    <p
      className="c0"
    >
      テキスト
    </p>
  </styled.p>
</NoteText>
`;

exports[`should match snapshot: NoteText/red-emphasis 1`] = `
.c0 {
  color: #e60000;
  font-size: 16px;
  font-weight: bold;
}

<NoteText
  emphasis={true}
  red={true}
>
  <styled.p
    emphasis={true}
    red={true}
  >
    <p
      className="c0"
    >
      テキスト
    </p>
  </styled.p>
</NoteText>
`;
